# Assignments-Q2-New

./: .gitignore
1/Packaged App/project/: README.md  pyproject.toml
1/Packaged App/project/src/project/: app2.py
1/Simple App/project/: README.md  app.py
3/packaged/project/: .env  pyproject.toml
3/packaged/project/src/project/: __init__.py  main.py  mysecrets.py
3/simple/simproject/: .env  agent.py  main.py  mysecrets.py  pyproject.toml
packaged/project/: .gitignore  README.md  pyproject.toml
packaged/project/src/project/: __init__.py  main.py
simple/simproject/: README.md  hello.py
