[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Azlan Khan", email = "khan2007azlan@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.2.11",
]

[project.scripts]
project = "project:main"
run = "project:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
